@@ -221,7 +221,7 @@ define,	   0x55DD50,	0x569DF0,	0x55DD00,	"Leader_compute_income",			"int (__fast
 define,	   0x5612F0,	0x56D420,	0x5612A0,	"Leader_recompute_economy",			"void (__fastcall *) (Leader * this)"
 repl call, 0x560C16,	0x56CD25,	0x560BC6,	"Leader_sum_improv_maintenance_to_pay_1",	""
 repl call, 0x560C64,	0x56CDA8,	0x560C14,	"Leader_sum_improv_maintenance_to_pay_2",	""
-define,	   0x4ACDF0,	0x4B3DD0,	0x4ACE80,	"City_get_improvement_maintenance",		"int (__fastcall *) (City * this, int edx, int improv_id)"
+inlead,	   0x4ACDF0,	0x4B3DD0,	0x4ACE80,	"City_get_improvement_maintenance",		"int (__fastcall *) (City * this, int edx, int improv_id)"
 define,	   0x4C2350,	0x4C9B30,	0x4C2370,	"Leader_set_treasury",				"void (__fastcall *) (Leader * this, int edx, int amount)"
 define,	   0x4B3400,	0x4BA3A0,	0x4B3490,	"City_sell_improvement",			"void (__fastcall *) (City * this, int edx, int improv_id, bool set_status_bit)"
 define,	   0x9E85F0,	0xA0ADF0,	0x9E85B0,	"p_civilopedia_form",				"Civilopedia_Form *"
@@ -743,6 +743,7 @@ define,	   0x9C34E4,	0x9E5CDC,	0x9C34A4,	"p_zoom_to_city_after_update",			"bool 
 define,	   0x5812BA,	0x58DFE7,	0x58101A,	"ADDR_PATHFINDER_RECONSTRUCTION_MAX_LEN",	"byte *"
 inlead,	   0x4BFD40,	0x4C7300,	0x4BFDD0,	"City_get_turns_to_build",			"int (__fastcall *) (City * this, int edx, int order_type, int order_id, bool param_3)"
 repl call, 0x4C06C0,	0x4C7C80,	0x4C0750,	"City_can_build_upgrade_type",			""
+define,	   0x4C1F80,	0x4C96B0,	0x4C2010,	"Hash_Table_look_up",				"bool (__fastcall *) (Hash_Table * this, int edx, int key, int * out_value)"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
