@@ -1,5 +1,6 @@
 - Option to prevent units from upgrading past an intermediate type that does not have the upgrade ability
   - Setting named prevent_old_units_from_upgrading_past_ability_block
+- Do not charge maintenance for buildings provided for free by shared wonder effects
 
 * RELEASE 24
 - Option to share wonders among human players in hotseat mode, setting named share_wonders_in_hotseat
